[gd_scene load_steps=7 format=3 uid="uid://brmi7yqy6hjie"]

[ext_resource type="Texture2D" uid="uid://uqbu5i44bri8" path="res://Sprites/Images/Background/GameOverScreenBG.png" id="1_2u1go"]
[ext_resource type="Script" path="res://Scenes/Menus/game_over.gd" id="1_vkenx"]
[ext_resource type="AudioStream" uid="uid://dqvljxp8lfgg3" path="res://Sounds/Game_Over.wav" id="2_vs778"]
[ext_resource type="FontFile" uid="uid://dbdv0matl6f8m" path="res://Sprites/Fonty/I-pixel-u.ttf" id="3_gbeax"]
[ext_resource type="Texture2D" path="res://Sprites/Images/GAME_OVER_title.png" id="5_3mm5b"]
[ext_resource type="Texture2D" uid="uid://dfjh48cyc1gwc" path="res://Sprites/Images/Background/Red Cross.png" id="5_i4oim"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vkenx")

[node name="Score Label" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.198
anchor_bottom = 0.611
offset_left = 442.0
offset_top = 218.0
offset_right = 493.904
offset_bottom = -121.928
theme_override_fonts/normal_font = ExtResource("3_gbeax")
theme_override_font_sizes/normal_font_size = 35
text = "SCORE:"

[node name="Score" type="RichTextLabel" parent="Score Label"]
layout_mode = 0
offset_left = 157.0
offset_right = 572.0
offset_bottom = 53.0
theme_override_fonts/normal_font = ExtResource("3_gbeax")
theme_override_font_sizes/normal_font_size = 35
text = "0"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(581, 314)
scale = Vector2(1.07291, 1.10031)
texture = ExtResource("1_2u1go")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vs778")
autoplay = true

[node name="Game over" type="Sprite2D" parent="."]
position = Vector2(566, 132)
texture = ExtResource("5_3mm5b")

[node name="hater" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -33.0
offset_right = 292.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_gbeax")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "Wow, you [shake rate=50 level=10]REALLY[/shake] hate babies"
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Cool Guy" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -26.0
offset_right = 331.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_gbeax")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "You're a [shake rate=50 level=10]\"good\"[/shake] person"
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="What" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -20.0
offset_right = 360.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_gbeax")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "What. How did you. That's insane
"
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.026
anchor_right = 0.5
anchor_bottom = 1.026
offset_left = -175.0
offset_top = -290.848
offset_right = 179.0
offset_bottom = -117.848
grow_horizontal = 2
grow_vertical = 0

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Quit")
theme_override_fonts/font = ExtResource("3_gbeax")
theme_override_font_sizes/font_size = 30
text = "RESTART GAME"
flat = true

[node name="StartCross" type="Sprite2D" parent="VBoxContainer/Restart"]
visible = false
position = Vector2(58, 27)
scale = Vector2(3.75, 3.5625)
texture = ExtResource("5_i4oim")

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Restart")
focus_neighbor_top = NodePath("../Restart")
focus_neighbor_right = NodePath("../Restart")
focus_neighbor_bottom = NodePath("../Restart")
focus_next = NodePath("../Restart")
focus_previous = NodePath("../Restart")
theme_override_fonts/font = ExtResource("3_gbeax")
theme_override_font_sizes/font_size = 30
text = "QUIT"
flat = true

[node name="quitCross" type="Sprite2D" parent="VBoxContainer/Quit"]
visible = false
position = Vector2(125, 26)
scale = Vector2(3.375, 3.375)
texture = ExtResource("5_i4oim")

[connection signal="focus_entered" from="VBoxContainer/Restart" to="." method="_on_restart_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Restart" to="." method="_on_restart_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Quit" to="." method="_on_quit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
